<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activity.SignUpActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/signup_title"
        android:textSize="30dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/signup_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/colorTextBackgroud"
        android:hint="@string/signup_name"
        android:padding="10dp"
        android:textColor="@color/colorText" />

    <EditText
        android:id="@+id/signup_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/colorTextBackgroud"
        android:hint="@string/signup_email"
        android:padding="10dp"
        android:textColor="@color/colorText" />

    <EditText
        android:id="@+id/signup_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/colorTextBackgroud"
        android:hint="@string/signup_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/colorText" />

    <EditText
        android:id="@+id/signup_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/colorTextBackgroud"
        android:hint="@string/signup_confirm_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/colorText" />

    <Button
        android:id="@+id/signup_btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/signup_btn_signup" />

    <Button
        android:id="@+id/signup_btn_return"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/signup_btn_return" />

</LinearLayout>